<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Страница переключения языка</string>
    <string name="Title">Страница переключения языка</string>
    <string name="SubTitle">Ячменцев Д. Н.</string>
    <string name="txtLang">Выбор языка:</string>
    <string name="btnLang">Ок</string>
    <string name="txtViewLang">Если мобильное приложение выходит на международный рынок, ему нужна локализация под разные языки.</string>
    <string-array name="language">
        <item>Русский</item>
        <item>Английский</item>
        <item>Немецкий</item>
    </string-array>
</resources>