<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/user"
        app:subtitle="@string/SubTitle"
        app:subtitleTextAppearance="@style/Toolbar.SubTitle"
        app:title="@string/Title"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <Spinner
        android:id="@+id/languageSpinner"
        style="@style/StySpine"
        android:layout_width="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/txtLang"
        app:layout_constraintTop_toBottomOf="@id/txtLang" />

    <Button
        android:id="@+id/btnLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btnLang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageSpinner" />

    <TextView
        android:id="@+id/txtLang"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txtLang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/txtViewLang"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLang" />
</androidx.constraintlayout.widget.ConstraintLayout>